--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 alembic==1.5.8
 attrs==20.3.0
+bcrypt==3.2.0
+cached-property==1.5.2
 certifi==2020.12.5
+cffi==1.14.5
 chardet==3.0.4
 click==7.1.2
+cryptography==3.4.7
+distro==1.5.0
+docker==5.0.0
+docker-compose==1.29.1
+dockerpty==0.4.1
+docopt==0.6.2
+-e git+https://github.com/Slowbroer/flash_card.git@d988ed738fa04b661c44b006a075fa92d0b183c6#egg=flash_card
 Flask==1.1.2
 Flask-Cache==0.13.1
 Flask-JSON==0.3.4
@@ -13,20 +23,33 @@ flask-redis==0.4.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+flask-zookeeper==0.0.8
 idna==2.10
+importlib-metadata==3.10.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jsonschema==3.2.0
+kazoo==2.8.0
 Mako==1.1.4
 MarkupSafe==1.1.1
+paramiko==2.7.2
+pycparser==2.20
 PyJWT==1.4.2
 PyMySQL==1.0.2
+PyNaCl==1.4.0
+pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-dotenv==0.16.0
 python-editor==1.0.4
+PyYAML==5.4.1
 redis==3.5.3
 requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.18
+texttable==1.6.3
+typing-extensions==3.7.4.3
 urllib3==1.25.11
+websocket-client==0.58.0
 Werkzeug==1.0.1
 WTForms==2.3.3
+zipp==3.4.1
