--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3"
+version: "3.9"
 services: 
     web: 
-        image: "flash_card:alpine"
-
-env_file: 
-    - .env
+        build: .
+        ports:
+            - "5000:5000"
+    redis:
+        image: "redis:alpine"
 
